# litert-lm-server

./: .gitignore  BUNDLE-MANIFEST.md  CMakeLists.txt  NOTICE  README.md  aarch64-clang-toolchain.cmake  probe.cpp  probe_sys.cpp  server.cpp
bazel/cross_aarch64/: BUILD  README.md  hello.cc
bazel/cross_aarch64_clang/: BUILD  README.md  cc_toolchain_config.bzl
bazel/cross_aarch64_clang/wrappers/: llvm-ar  llvm-nm  llvm-objcopy  llvm-objdump  llvm-strip
